--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
     }
   ],
   "scripts": {
-    "test": "gulp test"
+    "test": "gulp build && istanbul cover jasmine && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
-  "devDependencies": {
+  "dependencies": {
+    "coveralls": "^2.11.4",
     "babelify": "^6.1.1",
     "browserify": "^10.2.0",
     "gulp": "^3.8.11",
-    "gulp-jasmine": "^2.0.1",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-util": "^3.0.4",
     "vinyl-buffer": "^1.0.0",
