Add support for istanbul to browserify build.

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     }
   ],
   "scripts": {
-    "test": "istanbul cover jasmine && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
+    "test": "gulp build && istanbul cover jasmine && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
   "dependencies": {
     "babel": "^5.8.29",
