--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ node_js:
   - "0.10"
   - "iojs"
 before_script:
-  - npm install -g istanbul jasmine
+  - npm install -g webpack istanbul jasmine
 script:
   - npm test
