--- a/package.json
+++ b/package.json
@@ -31,18 +31,13 @@
     }
   ],
   "scripts": {
-    "test": "gulp build && istanbul cover jasmine && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
+    "test": "webpack && istanbul cover jasmine && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
   "dependencies": {
-    "babel": "^5.8.29",
-    "babelify": "^6.1.1",
-    "browserify": "^10.2.0",
-    "coveralls": "^2.11.4",
-    "gulp": "^3.8.11",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-util": "^3.0.4",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.2.1"
+    "babel-core": "^6.3.17",
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-register": "^6.3.13",
+    "coveralls": "^2.11.4"
   }
 }
